# cpputils

./: .gitignore  README.md
.github/workflows/: test_suite.yml
src/cpputils/: type_traits.hpp  utility.hpp
test/: CMakeLists.txt  test_type_traits.cpp  test_utility.cpp
